markups ch1-5 from David's review

--- a/tex/ch2.tex
+++ b/tex/ch2.tex
@@ -160,11 +160,10 @@ selection.
 
 \citet{Bettinelli:2010} investigates a particular variant of the bin packing
 problem where there is a minimum filling constraint.  This is an important
-consideration in vessel selection, usually some minimum fill level,
-\textit{e.g.} 20--30\% is defined so that the impeller in the vessel remains
-submerged during the mixing process and to reduce the volume of cleaning
-solutions or water required to clean the vessel as a fraction of the volume of 
-buffer produced.
+consideration in vessel selection, usually some minimum fill level, e.g.\
+20--30\% is defined so that the impeller in the vessel remains submerged during
+the mixing process and to reduce the volume of cleaning solutions or water
+required to clean the vessel as a fraction of the volume of buffer produced.
 
 In terms of process scheduling methodologies, a number of papers exist in the 
 field of chemical engineering \citep{Ahmed:2000},
