--- a/tex/thesis.tex
+++ b/tex/thesis.tex
@@ -27,8 +27,8 @@
 %   06Jun16  ST    0.1  Begun dissertation proper
 %
 
-\documentclass[a4paper,12pt,bibtotoc]{book}
-%\documentclass[a4paper,12pt,bibtotoc,oneside]{book} %  note no blank pages
+%\documentclass[a4paper,12pt,bibtotoc]{book}
+\documentclass[a4paper,12pt,bibtotoc,oneside]{book} %  note no blank pages
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{makeidx}
@@ -45,7 +45,7 @@ subfigure}
 \sisetup{input-ignore={,},input-decimal-markers={.}}
 \usepackage[hidelinks]{hyperref}
 \usepackage{doi}
-\usepackage{showframe} % comment this out to remove page layout frames
+%\usepackage{showframe} % comment this out to remove page layout frames
 
 \input{macros}
 \input{declarns}
