--- a/tex/ch1.tex
+++ b/tex/ch1.tex
@@ -83,7 +83,7 @@ two years and requires a multidisciplinary team of engineers and scientists.
 
 A complete facility typically starts with frozen vials of cells (the 
 \emph{working cell bank}) and finishes with the final formulated product in
-either bulk form or filled into its final packaging \textit{e.g.} syringes.
+either bulk form or filled into its final packaging e.g.\ syringes.
 Facilities are nominally divided into \emph{upstream} and \emph{downstream} 
 sections.
 The upstream section is predominantly concerned with the expansion of cells
@@ -162,7 +162,7 @@ area, for the example of a single buffer.
 
 Note that we define a complete processing step in a piece of equipment as a
 \emph{procedure}, e.g.\ `buffer preparation of buffer $n$'.
-Each procedure consists of one or more \emph{operations}, e.g.\ `charge WFI
+Each procedure consists of one or more \emph{operations}, e.g.\ `charge solids
 to vessel'.
 These definitions will be used throughout this document. 
 
@@ -173,9 +173,9 @@ After closing the solids charging port, the contents of the vessel are
 agitated to ensure complete solution of the solids.
 Heating or cooling may be applied via the vessel jacket.
 Sampling or testing may be performed, and adjustments made by adding more 
-solids of WFI.
+solids or WFI.
 
-Once the buffer has passed any required quality checks, it is pressure
+Once the buffer has passed all required quality checks, it is pressure
 transferred via a sterile filter to a sterile hold vessel.
 Prior to this point, the sterile filter, the hold vessel and all
 interconnecting pipework will have been sterilised, using clean steam, and then
@@ -228,9 +228,18 @@ buffer.
 
 \section{Design of Buffer Preparation Areas}\label{SS.buffprepdes}
 
-For a given product, a production process is defined at laboratory scale.
-The definition of key parameters at laboratory scale can allow process
-engineers to generate a production-scale mass balance.
+If a design for a large-scale production facility is to be carried out, the
+client must provide some information on the nature of the production process.
+Sometimes this can come in the form of information from another production
+facility, where the product is already being produced. 
+It may also come directly from small-scale development work carried out in a
+laboratory, or a \emph{pilot plant} (a small plant used to demonstrate how a
+process may be scaled from the laboratory to production scale).
+Given this information, a process engineer can create a \emph{mass balance}, 
+which is a document containing calculated values for all masses (and volumes)
+of products, additions and wastes for each procedure in the process.
+The mass balance is used to size the main production equipment (bioreactors,
+purification equipment, etc.).
 This mass balance provides, amongst other things, the volumes of all buffers
 and media required to make a batch.
 Two optimisation problems now emerge; how do we design the buffer and media
@@ -275,10 +284,12 @@ several times the cost of stainless steel, may be required for some
 
 \section{Problem Definition}\label{SS.probdef}
 The task of designing a buffer preparation area is complex.
-Current workflows are largely based on trial-and-error methods using process
-engineering scheduling software.
-A schedule is developed, in the scheduling software too, for the main process
-and for the preparation and hold procedures.
+Current workflows are largely based on trial-and-error methods using a process
+engineering scheduling software package (some of which are described in
+\hyperref[SS.bioprocdes]{Section \ref*{SS.bioprocdes}}).
+Using the package, a model is developed which captures the scheduling of the
+main process procedures and also the scheduling of the preparation and hold
+procedures for both buffer and media.
 Typically, a conservatively large array of buffer vessels is chosen and the
 schedule scenario is run.
 If there is an individual vessel for each task, the scenario will resolve
@@ -309,23 +320,35 @@ depends on the productivity of living cells.
 A more streamlined methodology for solving this optimisation problem is
 required and this dissertation is concerned with developing such a methodology
 and a software tool to implement it.
-The aim is to start with a reduced or basic case, including a number of
-simplifying assumptions, and develop a working tool to schedule the operations
-in buffer preparation and to vary the size and number of vessels and the 
-preparation strategy to optimise the process with respect to some metric.
-One a working framework has been developed, additional constraints can be added
-and simplifications can be removed to provide a better approximation of 
-real-world conditions.
+The aims are as follows:
+\begin{itemize}
+    \item Start with a reduced or basic case, including a number of simplifying
+        assumptions
+    \item Develop a tool to schedule the operations in buffer preparation and
+        to vary the size and number of vessels and the preparation strategy to
+        optimise the process with respect to some metric.
+    \item Once a working framework has been developed, apply additional
+        constraints (or remove simplifications) to provide a better
+        approximation of real-world conditions.
+\end{itemize}
 
-Success will be defined both in terms of the ability for the software tool to
-provide an optimum solution and the speed at which it can be implemented
-relative to other methods or benchmarks.
+In this study a technique is developed for design of the buffer preparation
+process, including vessel selection, sizing, assignment and scheduling.
+Unlike existing methods which utilize trial-and-error optimization, the
+proposed tool provably produces an optimum solution.
+In addition, the algorithm converges to the optimum rapidly, for problems of
+typical real-world complexity, providing a much faster design.
+The proposed tool requires minimal information.
+The information is requested in a format that is easy to understand, making it
+accessible to process engineers without specific experience in using the
+complex scheduling tools outlined in
+\hyperref[SS.bioprocdes]{Section \ref*{SS.bioprocdes}}.
 
 The business imperatives are twofold.
-For an engineering consultancy, the ability to rapidly, accurately and
+Firstly, for an engineering consultancy, the ability to rapidly, accurately and
 repeatably solve such problems gives a competitive edge, which can be used to
-win more business and to deliver designs more cheaply.  For a biopharmaceutical
-client, optimising this problem results in cost savings and having a well
-defined methodology for doing so gives confidence that an in-progress design is
-indeed optimal and robust.
+win more business and to deliver more cost-effective design.
+Secondly. for a biopharmaceutical client, optimising this problem results in
+cost savings and having a well defined methodology for doing so gives
+confidence that an in-progress design is indeed optimal and robust.
 
