--- a/tex/ch6.tex
+++ b/tex/ch6.tex
@@ -16,11 +16,11 @@
 \chapter{Discussion}\label{C.discussion}
 
 \begin{quote}
-We chase misprinted lies
+Nothing in life is as important as you think it is when you are thinking about
+it.
 
-We face the path of time
-
-\hspace{2cm}--- Alice in Chains, \emph{Nutshell}
+\hspace{2cm}--- Daniel Kahneman,
+\emph{Thinking, Fast and Slow}
 \end{quote}
 
 The models derived in \hyperref[C.methodology]{Chapter \ref*{C.methodology}}
