--- a/tex/ch7.tex
+++ b/tex/ch7.tex
@@ -16,11 +16,10 @@
 \chapter{Conclusions}\label{C.conclusions}
 
 \begin{quote}
-Nothing in life is as important as you think it is when you are thinking about
-it.
+I was not proud of what I had learned but I never doubted that it was worth
+knowing.
 
-\hspace{2cm}--- Daniel Kahneman,
-\emph{Thinking, Fast and Slow}
+\hspace{2cm}--- Hunter S. Thompson, \emph{The Rum Diary}
 \end{quote}
 
 This dissertation seeks to define the problem of buffer vessel selection in
